# ynov-2026-m1-fullstack-video-game

./: MICROKERNEL_README.md  MICROSERVICE_README.md  README.md  profile.json  pyproject.toml  ynov-26-m1-fullstack-game.drawio
plugins/: donjons_and_raids.py  world_map.py
plugins/stuff-t6/: gloves.py  helmets.py
plugins/stuff-t6-old/: common.py
plugins/stuff_t6/: __init__.py  common.py
src/nirahtech/: kernel.py  main.py
src/nirahtech/common/: body.py  difficulty.py  rarety.py  stuff.py
src/nirahtech/profile/application/domain/: mobs.py  models.py  stuff.py
src/nirahtech/profile/application/ports/inputs/: web.py
src/nirahtech/profile/application/ports/outputs/: persistence.py
src/nirahtech/profile/application/services/: services.py
src/nirahtech/profile/infrastructure/adapters/inputs/: microservice.py  microservice_guilde.py  microservice_profile.py
src/nirahtech/profile/infrastructure/adapters/outputs/: message_broker.py  repository.py
