[project]
name = "ynov-2026-m1-fullstack-video-game-rpg-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas Metivier",email = "nicolas.a.metivier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "py-eureka-client (>=0.13.3,<0.14.0)",
    "uvicorn (>=0.42.0,<0.43.0)"
]

[tool.poetry]
packages = [{include = "nirahtech", from = "src"}]

[tool.poetry.scripts]
plugin = "nirahtech.main:main_microkernel"
profile-microservice = "nirahtech.main:main_microservice"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
